dcc/testdata/semantic/output/illegal-03.out
testdata/semantic/illegal-03.dcf:2:0: error: class must contain a method 'main'.
class Program {
^
